<resources>
    <string name="app_name">MinyMart</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="signup">SignUp</string>
    <string name="sign_in">sign in</string>
    <string name="login">login</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="birthdate">birthdate</string>
    <string name="gender">gender</string>
    <string name="height">height</string>
    <string name="weight">weight</string>
    <string name="category">Category</string>
    <string name="view_all">View All</string>
    <string name="name">Name</string>
    <string name="First_name">First Name</string>
    <string name="Last_name">Last Name</string>
    <string name="Email">Email</string>
    <string name="Birthdate">Birthdate</string>
    <string name="Height">Height</string>
    <string name="_180cm">180cm</string>
    <string name="Weight">Weight</string>
    <string name="_80kg">80Kg</string>
    <string name="logout">Logout</string>
    <string name="total_harga">Total Harga</string>
    <string name="rp">Rp</string>
    <string name="checkout">Checkout</string>
    <string name="label_loading">This Is Empty View</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="the_quick_brown_fox_jumps_over_the_lazy_dog">The quick brown fox jumps over the lazy dog</string>
    <string name="_5_000_00">5.000.00</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce lorem diam, pulvinar id nisl non, ultrices maximus nibh.
        Suspendisse ut justo velit. Nullam ac ultrices risus, quis auctor orci. Vestibulum volutpat nisi et neque porta ullamcorper. Maecenas porttitor porta erat ac suscipit.
        Sed cursus leo ut elementum fringilla. Maecenas semper viverra erat, vel ullamcorper dui efficitur in. Vestibulum placerat imperdiet tellus, et tincidunt eros posuere eget. Proin sit amet facilisis libero.
        Nulla eget est ut erat aliquet rhoncus. Quisque ac urna vitae dui hendrerit sollicitudin vel id sem.
        In eget ante sapien. Quisque consequat velit non ante finibus, vel placerat erat ultricies. Aliquam bibendum justo erat, ultrices vehicula dolor elementum a. Mauris eu nisl feugiat ligula molestie eleifend.
        Aliquam efficitur venenatis velit ac porta. Vivamus vitae pulvinar tellus. Donec odio enim, auctor eget nibh mattis, ultricies dignissim lacus. Phasellus non tincidunt dui. Nulla eu arcu lorem.
        Donec non hendrerit augue, lobortis sollicitudin odio. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Duis sit amet euismod enim, eget vestibulum justo.
        Fusce a placerat lectus, eget feugiat purus. Cras risus ante, faucibus eget justo commodo, volutpat tempor ante. Donec sit amet leo venenatis, gravida quam sit amet, blandit dui.
        In quam ante, elementum ut faucibus nec, tristique vitae dui. Praesent vel erat at enim placerat luctus vel ut ipsum. In congue tempor mi, non ornare lectus condimentum at. Aenean libero diam, finibus eget sapien et, tristique fermentum lorem.
    </string>
    <string name="quantity">Quantity</string>
    <string name="bayar">Bayar</string>
    <string name="terima_kasih_sudah_belanja">Terima kasih sudah belanja!</string>

</resources>
