<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:id="@+id/scrool"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.SignUpActivity">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_large"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/colorWhite"
            app:cardCornerRadius="@dimen/margin_normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingStart="@dimen/margin_large"
                android:paddingTop="@dimen/margin_large"
                android:paddingEnd="@dimen/margin_large"
                android:paddingBottom="@dimen/margin_large">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_light"
                    android:text="@string/first_name"
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/text_size_medium" />

                <EditText
                    android:id="@+id/etx_first_name"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/lighter_grey"
                    android:hint="@string/first_name"
                    android:inputType="text" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_light"
                    android:text="@string/last_name"
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/text_size_medium" />

                <EditText
                    android:id="@+id/etx_last_name"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/lighter_grey"
                    android:hint="@string/last_name"
                    android:inputType="text" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_light"
                    android:text="@string/email"
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/text_size_medium" />

                <EditText
                    android:id="@+id/etx_email"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/lighter_grey"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_light"
                    android:text="@string/password"
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/text_size_medium" />

                <EditText
                    android:id="@+id/etx_password"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/lighter_grey"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_light"
                    android:text="@string/birthdate"
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/text_size_medium" />

                <EditText
                    android:id="@+id/etx_birthdate"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"
                    android:imeOptions="actionNext"
                    android:backgroundTint="@color/lighter_grey"
                    android:hint="@string/birthdate" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_light"
                    android:text="@string/gender"
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/text_size_medium" />

                <EditText
                    android:id="@+id/etx_gender"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"
                    android:imeOptions="actionNext"
                    android:backgroundTint="@color/lighter_grey"
                    android:hint="@string/gender" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_light"
                    android:text="@string/height"
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/text_size_medium" />

                <EditText
                    android:id="@+id/etx_height"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"
                    android:imeOptions="actionNext"
                    android:backgroundTint="@color/lighter_grey"
                    android:hint="@string/height" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_light"
                    android:text="@string/weight"
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/text_size_medium" />

                <EditText
                    android:id="@+id/etx_weight"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"
                    android:imeOptions="actionNext"
                    android:backgroundTint="@color/lighter_grey"
                    android:hint="@string/weight" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <Button
                        android:id="@+id/btn_signup"
                        style="@style/DarkButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:clickable="true"
                        android:onClick="onClickView"
                        android:focusable="true"
                        android:text="@string/signup"
                        android:textAllCaps="false"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txt_signup"
                        android:layout_width="80dp"
                        android:layout_height="30dp"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:onClick="onClickView"
                        android:focusable="true"
                        android:gravity="center"
                        android:text="@string/sign_in"
                        android:textSize="@dimen/text_size_normal" />

                </RelativeLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>