<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:layout_width="190dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="4dp"
    android:layout_marginTop="8dp"
    app:cardCornerRadius="@dimen/margin_tiny"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_product"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:src="@drawable/empty_image" />

        <TextView
            android:id="@+id/txt_product"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center|bottom"
            android:gravity="center"
            android:text="@string/category" />

        <TextView
            android:id="@+id/txt_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:gravity="center"
            android:layout_marginTop="@dimen/margin_half_medium"
            android:text="@string/the_quick_brown_fox_jumps_over_the_lazy_dog" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_half_medium"
            android:layout_marginBottom="@dimen/margin_half_medium"
            android:gravity="center">

            <TextView
                android:id="@+id/txt_price"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:textStyle="bold"
                android:layout_gravity="center|bottom"
                android:gravity="center"
                android:text="Rp." />

            <TextView
                android:id="@+id/txt_vprice"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="center|left"
                android:paddingLeft="@dimen/margin_mini"
                android:text="@string/_5_000_00" />

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
