<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:id="@+id/scrool"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/constraint"
        tools:context=".activity.LoginActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/logo_login"
            app:layout_constraintTop_toTopOf="@+id/guideline6" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorWhite"
            android:layout_margin="@dimen/margin_large"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="20dp"
            app:cardCornerRadius="@dimen/margin_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingStart="@dimen/margin_large"
                android:paddingTop="@dimen/margin_large"
                android:paddingEnd="@dimen/margin_large"
                android:paddingBottom="@dimen/margin_large">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_light"
                    android:text="@string/email"
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/text_size_medium" />

                <EditText
                    android:id="@+id/etx_email"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/lighter_grey"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_light"
                    android:text="@string/password"
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/text_size_medium" />

                <EditText
                    android:id="@+id/etx_password"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/lighter_grey"
                    android:inputType="textPassword"
                    android:hint="@string/password"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <Button
                        android:id="@+id/btn_signin"
                        style="@style/DarkButton"
                        android:textSize="16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:clickable="true"
                        android:textAllCaps="false"
                        android:onClick="onClickView"
                        android:text="@string/sign_in"
                        android:layout_alignParentEnd="true"
                        android:focusable="true" />

                    <TextView
                        android:id="@+id/txt_signup"
                        android:layout_width="80dp"
                        android:layout_height="30dp"
                        android:layout_alignParentStart="true"
                        android:textSize="16sp"
                        android:clickable="true"
                        android:onClick="onClickView"
                        android:background="?attr/selectableItemBackground"
                        android:text="@string/signup"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        android:focusable="true" />

                </RelativeLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/img_help"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:focusable="true"
            android:onClick="onClickView"
            app:layout_constraintBottom_toTopOf="@+id/guideline6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent=".06"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent=".1"
            app:srcCompat="@drawable/ic_help" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="75dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="57dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>